# pinky-pie

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: basic_test.yml
src/: App.module.css  App.tsx  constant.ts  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  error.rs  main.rs  model.rs  mongodb_events.rs
src/components/: AggregateTab.tsx  AggregateTabStageRow.tsx  BsonViewer.tsx  DatabaseCollectionBar.tsx  DocumentAggregation.tsx  DocumentListing.tsx  DocumentsTab.tsx  EitherView.tsx  JsonViewer.tsx  LeftNavBar.tsx  MongoDbUrlBar.tsx  SchemaTab.tsx  ServerInfo.tsx  ServerMetric.tsx  TabView.tsx  TopNavBar.tsx
