[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = "1.0.0-beta.4"

[dependencies]
serde_json = "1.0.74"
backtrace = "0.3.63"
serde = { version = "1.0.133", features = [ "derive" ] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all", "dialog-open", "dialog-save", "shell-open"] }
id3 = "0.6.6"
mp4ameta = "0.11.0"
base64 = "0.13.0"
mongodb = { version = "2.1.0", default-features = false, features = [ "sync", "bson-chrono-0_4" ] }
lazy_static = "1.4.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
