[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0.79"
backtrace = "0.3.65"
serde = { version = "1.0.136", features = [ "derive" ] }
tauri = { version = "1.0.0", features = ["api-all"] }
id3 = "1.0.2"
mp4ameta = "0.11.0"
base64 = "0.13.0"
mongodb = { version = "2.2.1", default-features = false, features = [ "sync", "bson-chrono-0_4" ] }
lazy_static = "1.4.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
